--- a/.prettierrc
+++ b/.prettierrc
@@ -1,10 +1,8 @@
 {
-    "semi": true,
-    "singleQuote": false,
-    "tabWidth": 2,
-    "useTabs": false,
-    "trailingComma": "es5",
-    "plugins": [
-        "prettier-plugin-tailwindcss"
-    ]
+  "semi": true,
+  "singleQuote": false,
+  "tabWidth": 2,
+  "useTabs": false,
+  "trailingComma": "es5",
+  "plugins": ["prettier-plugin-tailwindcss"]
 }
